crates/reinhardt-pages/tests/ui/form_values/fail/tuple_struct.rs
use reinhardt_pages::FormValues;

#[derive(Clone, PartialEq, FormValues)]
struct BadFormValues(String);

fn main() {}
