crates/reinhardt-pages/tests/ui/form_values/fail/tuple_struct.stderr
error: FormValues can only be derived for structs with named fields
 --> tests/ui/form_values/fail/tuple_struct.rs:4:8
  |
4 | struct BadFormValues(String);
  |        ^^^^^^^^^^^^^
